function reference with right type